--- a/Widget Test/app/src/main/res/layout/cell_listview.xml
+++ b/Widget Test/app/src/main/res/layout/cell_listview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
 
     <RelativeLayout
         android:id="@+id/layImage"
@@ -13,17 +13,20 @@
 
 
         <ImageView
+            android:id="@+id/imgImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background"/>
+            android:scaleType="centerCrop"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <ProgressBar
-                android:id="@+id/firstProgressBar"
+                android:id="@+id/prgPercentage"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:progressDrawable="@drawable/custom_progressbar"
                 android:layout_width="0dp"
@@ -32,14 +35,13 @@
                 android:max="100"
                 android:progress="22"
                 android:padding="15dp"
-                android:minHeight="40dp"
-                android:layout_centerInParent="true"/>
+                android:minHeight="40dp" />
 
             <TextView
                 android:id="@+id/txtFirstPercentage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="#000"
                 android:text="22%"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center"
@@ -50,13 +52,12 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txtFirst"
+            android:id="@+id/txtImageFooter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="#000"
             android:layout_alignParentBottom="true"
             android:text="For sure! He's done."
-            android:layout_centerInParent="true"
             android:layout_marginStart="15dp"
             android:paddingLeft="5dp"
             android:textSize="@dimen/widget_text_size"/>
